--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -205,6 +205,7 @@ main {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    gap: 15px;
 }
 
 .modal-header h3 {
