--- a/frontend/templates/project.html
+++ b/frontend/templates/project.html
@@ -9,6 +9,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         />
         <link rel="stylesheet" href="../static/css/project.css" />
+        <link rel="stylesheet" href="../static/css/no_blue.css">
     </head>
     <body>
         <div class="top-bar">
@@ -21,7 +22,9 @@
                 <div class="editor">
                     <!-- Название проекта -->
                     <div class="card">
-                        <label for="projectNameInput">Название проекта</label>
+                        <label for="projectNameInput" style="font-size: 16px"
+                            >Название проекта</label
+                        >
                         <input
                             id="projectNameInput"
                             class="project-name"
@@ -33,8 +36,8 @@
 
                     <!-- Добавить пользователя -->
                     <div class="card">
-                        <label for="userSearch"
-                            >Добавить пользователя в проект</label
+                        <label for="userSearch" style="font-size: 16px"
+                            >Добавить участника</label
                         >
                         <div class="row">
                             <div class="search-wrapper">
