--- a/frontend/templates/project.html
+++ b/frontend/templates/project.html
@@ -9,7 +9,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         />
         <link rel="stylesheet" href="../static/css/project.css" />
-        <link rel="stylesheet" href="../static/css/no_blue.css">
+        <link rel="stylesheet" href="../static/css/no_blue.css" />
     </head>
     <body>
         <div class="top-bar">
