--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -43,9 +43,9 @@
         </main>
 
         <div class="bottom-bar">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-folder" id="folderBtn"></i>
-            <i class="fas fa-user"></i>
+            <i class="fas fa-clock" id="clockBtn"></i>
+            <i class="fas fa-folder active" id="folderBtn"></i>
+            <i class="fas fa-user" id="userBtn"></i>
         </div>
 
         <!-- Модал уведомлений -->
