--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -27,6 +27,7 @@
                             <i class="fas fa-plus"></i> Добавить проект
                         </button>
                     </div>
+                    <div class="filter-active card">Фильтры: Нет</div>
                     <div id="projectsList"></div>
                 </section>
 
