--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -153,26 +153,28 @@
                 </div>
 
                 <div class="custom-interval">
-                    <div>
-                        <label onclick="openCalendar('dateFrom')"
-                            >От:
-                            <input
-                                type="text"
-                                id="dateFrom"
-                                placeholder="YYYY-MM-DD"
-                            />
-                        </label>
-                    </div>
+                    <div style="display: flex; gap: 10px">
+                        <div>
+                            <label onclick="openCalendar('dateFrom')"
+                                >От:
+                                <input
+                                    type="text"
+                                    id="dateFrom"
+                                    placeholder="YYYY-MM-DD"
+                                />
+                            </label>
+                        </div>
 
-                    <div>
-                        <label onclick="openCalendar('dateTo')"
-                            >До:
-                            <input
-                                type="text"
-                                id="dateTo"
-                                placeholder="YYYY-MM-DD"
-                            />
-                        </label>
+                        <div>
+                            <label onclick="openCalendar('dateTo')"
+                                >До:
+                                <input
+                                    type="text"
+                                    id="dateTo"
+                                    placeholder="YYYY-MM-DD"
+                                />
+                            </label>
+                        </div>
                     </div>
                     <div>
                         <button id="applyInterval">Применить</button>
