--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -65,7 +65,7 @@ main {
 .content {
     flex: 1;
     overflow-y: auto;
-    padding: 0 15px 80px;
+    padding-bottom: 80px;
 }
 
 .content::-webkit-scrollbar {
@@ -337,6 +337,8 @@ main {
 #sectionsContainer {
     max-height: 100%;
     overflow: visible;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .project-info {
