--- a/frontend/templates/clock.html
+++ b/frontend/templates/clock.html
@@ -10,6 +10,7 @@
         />
         <link rel="stylesheet" href="../static/css/no_blue.css" />
         <link rel="stylesheet" href="../static/css/clock.css" />
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </head>
     <body>
         <!-- Верхняя панель -->
@@ -115,6 +116,7 @@
             </p>
         </div>
 
+        <script src="../static/js/auth.js" defer></script>
         <script src="../static/js/clock.js" defer></script>
     </body>
 </html>
