--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -10,6 +10,7 @@
         />
         <link rel="stylesheet" href="../static/css/index.css" />
         <link rel="stylesheet" href="../static/css/no_blue.css" />
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </head>
     <body>
         <div class="top-bar">
@@ -286,6 +287,7 @@
             <div class="context-item" data-action="delete">Удалить</div>
         </div>
 
+        <script src="../static/js/auth.js" defer></script>
         <script src="../static/js/app.js" defer></script>
     </body>
 </html>
