--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="../static/css/no_blue.css" />
         <link rel="stylesheet" href="../static/css/profile.css" />
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </head>
     <body>
         <!-- Верхняя панель -->
@@ -227,6 +228,7 @@
             </div>
         </div>
 
+        <script src="../static/js/auth.js" defer></script>
         <script src="../static/js/profile.js" defer></script>
     </body>
 </html>
