--- a/frontend/templates/project.html
+++ b/frontend/templates/project.html
@@ -10,6 +10,7 @@
         />
         <link rel="stylesheet" href="../static/css/project.css" />
         <link rel="stylesheet" href="../static/css/no_blue.css" />
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </head>
     <body>
         <div class="top-bar">
@@ -135,6 +136,7 @@
             </div>
         </div>
 
+        <script src="../static/js/auth.js" defer></script>
         <script src="../static/js/project.js" defer></script>
     </body>
 </html>
