--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -177,6 +177,8 @@
                                     type="text"
                                     id="dateFrom"
                                     placeholder="YYYY-MM-DD"
+                                    readonly
+                                    inputmode="none"
                                 />
                             </label>
                         </div>
@@ -188,6 +190,8 @@
                                     type="text"
                                     id="dateTo"
                                     placeholder="YYYY-MM-DD"
+                                    readonly
+                                    inputmode="none"
                                 />
                             </label>
                         </div>
